--- a/style.css
+++ b/style.css
@@ -189,8 +189,8 @@ footer a:focus {
 }
 
 .footer-icon {
-  height: 15px;
-  width: 15px;
+  height: 2.5em;
+  width: 2.5em;
 }
 
 @media (min-width: 700px) {
