--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 * {
   box-sizing: border-box;
-  font-family: din-alternate, sans-serif;
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
 }
 
 body {
   margin: 0;
+  font-size: 100%;
 }
 
 main {
